vlib/v/checker/tests/filter_on_non_arr_err.out
vlib/v/checker/tests/filter_on_non_arr_err.vv:2:21: error: undefined ident: `it`
    1 | fn main() {
    2 |     _ := 'test'.filter(it == `t`)
      |                        ~~
    3 | }