vlib/v/checker/tests/filter_on_non_arr_err.vv
fn main() {
	_ := 'test'.filter(it == `t`)
}